# OuterWorldsWiki

./: .gitignore  README.md  pyproject.toml
src/: app.py  prompts.py  utils.py
src/samples/: paddleocr_example.py
